--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
+            background-color: #f9f9f9;
+            background-image: url('images/background.jpg'); /* Add your background image here */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: #333;
         }
         .container {
             width: 90%;
             margin: auto;
             padding: 20px;
+            background: rgba(255, 255, 255, 0.9); /* Slight transparency for readability */
+            border-radius: 8px;
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: #0073e6;
             margin-bottom: 20px;
         }
         .grid-container {
@@ -28,26 +35,21 @@
         }
         .certificate, .project {
             background-color: #fff;
-            padding: 20px;
+            padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s;
+            text-align: center;
         }
-        .certificate:hover, .project:hover {
-            transform: scale(1.05);
-        }
-        .certificate img, .project img {
+        iframe {
             width: 100%;
-            height: auto;
+            height: 400px;
+            border: none;
             border-radius: 8px;
         }
         .certificate h3, .project h3 {
             color: #0073e6;
             font-size: 1.2rem;
-            margin: 10px 0;
-        }
-        .certificate p, .project p {
-            color: #555;
+            margin-top: 10px;
         }
         .project a {
             display: inline-block;
@@ -67,38 +69,34 @@
 <body>
     <div class="container">
         <h1>My Certificates & GitHub Projects</h1>
+
+        <!-- Certificates Section -->
         <div class="grid-container">
-            <!-- Certificates Section -->
             <div class="certificate">
-                <img src="images/aws-cert.png" alt="AWS Certificate">
-                <h3>AWS Certified Solutions Architect</h3>
-                <p>Valid through 2024</p>
+                <iframe src="AWS Certified Solutions Architect - Associate certificate.pdf"></iframe>
+                <h3>AWS Certified Solutions Architect - Associate</h3>
             </div>
             <div class="certificate">
-                <img src="images/rhcsa-cert.png" alt="RHCSA Certificate">
+                <iframe src="certificates/rhcsa-certified.pdf"></iframe>
                 <h3>Red Hat Certified System Administrator (RHCSA)</h3>
-                <p>Valid through 2024</p>
             </div>
-            <!-- Repeat for the rest of your certificates -->
+            <!-- Add more certificates similarly -->
             <div class="certificate">
-                <img src="images/cert3.png" alt="Certificate 3">
+                <iframe src="certificates/cert3.pdf"></iframe>
                 <h3>Certificate 3</h3>
-                <p>Details about Certificate 3</p>
             </div>
-            <!-- Add more certificates in similar structure -->
+            <!-- Add remaining certificates -->
 
             <!-- Projects Section -->
             <div class="project">
-                <img src="images/project1.png" alt="Project 1">
-                <h3>Project 1: Telekom Deutschland</h3>
-                <p>Managed Kubernetes clusters for 5G rollout and automation.</p>
-                <a href="https://github.com/ayushmaan-singh1/website/tree/public" target="_blank">View on GitHub</a>
+                <iframe src="certificates/project1.pdf"></iframe>
+                <h3>Project 1: Telekom Deutschland (5G Rollout)</h3>
+                <a href="https://github.com/ayushmaan-singh1/My-Website/tree/develop" target="_blank">View on GitHub</a>
             </div>
             <div class="project">
-                <img src="images/project2.png" alt="Project 2">
-                <h3>Project 2: Dish Network</h3>
-                <p>Provided cloud-native solutions for ORAN 5G, improving scalability.</p>
-                <a href="https://github.com/ayushmaan-singh1/website/tree/public" target="_blank">View on GitHub</a>
+                <iframe src="certificates/project2.pdf"></iframe>
+                <h3>Project 2: Dish Network (ORAN 5G)</h3>
+                <a href="https://github.com/ayushmaan-singh1/My-Website/tree/develop" target="_blank">View on GitHub</a>
             </div>
         </div>
     </div>
