--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Certificates Section -->
         <div class="grid-container">
             <div class="certificate">
-                <iframe src="AWS Certified Solutions Architect - Associate certificate.pdf"></iframe>
+                <iframe src="certificates/AWS Certified Solutions Architect - Associate certificate.pdf"></iframe>
                 <h3>AWS Certified Solutions Architect - Associate</h3>
             </div>
             <div class="certificate">
