--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <!-- Projects Section -->
             <div class="project">
-                <iframe src="certificates/project1.pdf"></iframe>
+                <iframe src="certificates/S3-website.pdf"></iframe>
                 <h3>Project 1: Telekom Deutschland (5G Rollout)</h3>
                 <a href="https://github.com/ayushmaan-singh1/My-Website/tree/develop" target="_blank">View on GitHub</a>
             </div>
