--- a/index.html
+++ b/index.html
@@ -73,27 +73,26 @@
         <!-- Certificates Section -->
         <div class="grid-container">
             <div class="certificate">
-                <iframe src="./AWS Certified Solutions Architect - Associate certificate.pdf"></iframe>
+                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/aws-certified.pdf"></iframe>
                 <h3>AWS Certified Solutions Architect - Associate</h3>
             </div>
             <div class="certificate">
-                <iframe src="certificates/rhcsa-certified.pdf"></iframe>
+                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/rhcsa-certified.pdf"></iframe>
                 <h3>Red Hat Certified System Administrator (RHCSA)</h3>
             </div>
             <!-- Add more certificates similarly -->
             <div class="certificate">
-                <iframe src="certificates/cert3.pdf"></iframe>
+                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/cert3.pdf"></iframe>
                 <h3>Certificate 3</h3>
             </div>
-            <!-- Add remaining certificates -->
 
             <!-- Projects Section -->
             <div class="project">
-                <iframe src="certificates/S3-website.pdf"></iframe>
+                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/S3-website.pdf"></iframe>
                 <h3>Project 1: Telekom Deutschland (5G Rollout)</h3>
             </div>
             <div class="project">
-                <iframe src="certificates/project2.pdf"></iframe>
+                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/projects/project2.pdf"></iframe>
                 <h3>Project 2: Dish Network (ORAN 5G)</h3>
             </div>
         </div>
