--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Certificates Section -->
         <div class="grid-container">
             <div class="certificate">
-                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/aws-certified.pdf"></iframe>
+                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/AWS Certified Solutions Architect - Associate certificate.pdf"></iframe>
                 <h3>AWS Certified Solutions Architect - Associate</h3>
             </div>
             <div class="certificate">
@@ -82,8 +82,8 @@
             </div>
             <!-- Add more certificates similarly -->
             <div class="certificate">
-                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/cert3.pdf"></iframe>
-                <h3>Certificate 3</h3>
+                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/intellipaat-certificate.pdf"></iframe>
+                <h3>Intellipaat Linux Training Certificate 3</h3>
             </div>
 
             <!-- Projects Section -->
