--- a/index.html
+++ b/index.html
@@ -73,26 +73,26 @@
         <!-- Certificates Section -->
         <div class="grid-container">
             <div class="certificate">
-                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/AWS Certified Solutions Architect - Associate certificate.pdf"></iframe>
+                <iframe src="AWS Certified Solutions Architect - Associate certificate.pdf"></iframe>
                 <h3>AWS Certified Solutions Architect - Associate</h3>
             </div>
             <div class="certificate">
-                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/rhcsa-certified.pdf"></iframe>
+                <iframe src="Red_Hat_Certificate_RHCSA-rhel_Ayushmaan_Singh_Sengar.pdf"></iframe>
                 <h3>Red Hat Certified System Administrator (RHCSA)</h3>
             </div>
             <!-- Add more certificates similarly -->
             <div class="certificate">
-                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/intellipaat-certificate.pdf"></iframe>
+                <iframe src="intellipaat-certificate.pdf"></iframe>
                 <h3>Intellipaat Linux Training Certificate 3</h3>
             </div>
 
             <!-- Projects Section -->
             <div class="project">
-                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/S3-website.pdf"></iframe>
+                <iframe src="S3-website.pdf"></iframe>
                 <h3>Project 1: Telekom Deutschland (5G Rollout)</h3>
             </div>
             <div class="project">
-                <iframe src="https://github.com/ayushmaan-singh1/My-Website/develop/projects/project2.pdf"></iframe>
+                <iframe src="Red_Hat_Certificate_RHCSA-rhel_Ayushmaan_Singh_Sengar.pdf"></iframe>
                 <h3>Project 2: Dish Network (ORAN 5G)</h3>
             </div>
         </div>
