--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>My Certificates & GitHub Projects</h1>
+        <h1>My Certificates & Projects</h1>
 
         <!-- Certificates Section -->
         <div class="grid-container">
