--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <h3>AWS Certified Solutions Architect - Associate</h3>
                 <a href="AWS Certified Solutions Architect - Associate certificate.pdf" target="_blank">View Certificate</a>
             </div>
+            <div class="certificate">
                 <h3>Red Hat RHCSA Certificate</h3>
                 <a href="Red_Hat_Certificate_RHCSA-rhel_Ayushmaan_Singh_Sengar.pdf" target="_blank">View Certificate</a>
             </div>
